// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should match the snapshot 1`] = `
<Styled(IoAndroidAdd)
  fontSize="2em"
/>
`;

exports[`Icon should match the snapshot when name is different 1`] = `
<Styled(IoIosCogOutline)
  fontSize="2em"
/>
`;
